# skelembedtrain

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml  setup.cfg
contrib/slurm/: README.md
